--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 20px;
+            padding: 0;
             display: flex;
             justify-content: center;
+            align-items: center;
+            height: 100vh;
             background-color: #f5f5f5;
-            min-height: 100vh;
             box-sizing: border-box;
         }
 
@@ -23,9 +24,9 @@
             border-radius: 8px;
             width: 100%;
             max-width: 600px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            max-height: 100vh;
+            max-height: 90vh;
             overflow-y: auto;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         .form-title {
